--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,11 +34,11 @@ a {
 }
 
 .modal {
-  width: clamp(50%, 700px, 90%);
-  height: min(50%, 300px);
+  width: 40%;
+  height: 60%;
 
   margin: auto;
-  padding: 0 2rem;
+  padding: 2rem 2rem;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
